# mercuryTrade

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
config/: config.json
db/: schema.sql
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: OrderConfirmationModal.tsx
frontend/src/components/Layout/: MainLayout.tsx
frontend/src/components/MarketAnalysis/: MarketAnalysis.tsx  MarketDepth.tsx
frontend/src/components/OrderBook/: OrderBook.tsx
frontend/src/components/OrderForm/: OrderForm.tsx
frontend/src/components/Portfolio/: AssetList.tsx  PortfolioOverview.tsx  TransactionList.tsx  index.ts
frontend/src/components/Positions/: PositionsSummary.tsx  PositionsTable.tsx
frontend/src/components/PriceChart/: PriceChart.tsx
frontend/src/components/TradeHistory/: TradeHistory.tsx
frontend/src/contexts/: AuthContext.tsx  PortfolioContext.tsx  PositionsContext.tsx  TradingContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Portfolio.tsx  Positions.tsx  Profile.tsx  Register.tsx  Trading.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: auth.ts  portfolio.ts  positions.ts  trading.ts
include/mercuryTrade/api/auth/: AuthController.hpp
include/mercuryTrade/api/market/: MarketDataController.hpp
include/mercuryTrade/api/orders/: OrderController.hpp
include/mercuryTrade/api/routes/: AuthRoutes.hpp  MarketDataRoutes.hpp  OrderBookRoutes.cpp
include/mercuryTrade/config/: Config.hpp
include/mercuryTrade/core/memory/: mercAllocator.hpp  mercAllocatorManager.hpp  mercMarketDataAllocator.hpp  mercMemoryTracker.hpp  mercOrderBookAllocator.hpp  mercTradingManager.hpp  mercTransactionAllocator.hpp
include/mercuryTrade/http/: Server.hpp
include/mercuryTrade/middleware/: AuthMiddleware.hpp
include/mercuryTrade/services/: MarketDataService.hpp  OrderBookService.hpp  OrderService.hpp  UserService.hpp
include/mercuryTrade/utils/: JWTUtils.hpp  Logger.hpp
include/mercuryTrade/websocket/: WebSocketServer.hpp
src/api/: main.cpp
src/api/auth/: AuthController.cpp
src/api/market/: MarketDataController.cpp
src/api/orders/: OrderController.cpp
src/core/memory/: CMakeLists.txt  mercAllocator.cpp  mercAllocatorManager.cpp  mercMarketDataAllocator.cpp  mercMemoryTracker.cpp  mercOrderBookAllocator.cpp  mercTradingManager.cpp  mercTransactionAllocator.cpp
src/http/: Server.cpp
src/services/: MarketDataService.cpp  OrderBookService.cpp  OrderService.cpp  UserService.cpp
src/utils/: JWTUtils.cpp
tests/core/memory/: CMakeLists.txt  Makefile  mercAllocatorManagerTest.cpp  mercAllocatorTest.cpp  mercMarketDataAllocatorTest.cpp  mercMemoryTrackingTest.cpp  mercOrderBookAllocatorTest.cpp  mercTradingManagerTest.cpp  mercTransactionAllocatorTest.cpp
tests/core/memory/memory/: Makefile
